--- a/cafe.html
+++ b/cafe.html
@@ -39,7 +39,7 @@
                         <a class="nav-link ms-2" href="#">Profile</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link ms-2" href="#">Booking</a>
+                        <a class="nav-link ms-2" href="./booking.html">Booking</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active ms-2" href="#">Cafe</a>
@@ -49,13 +49,16 @@
                     </li>
                 </ul>
             </div>
+            <div class="profile-img d-none d-lg-block">
+                <img src="images/profile.jpg" class="img-fluid rounded-pill" alt="">
+            </div>
         </div>
     </nav>
 
     <div class="container pt-5 pe-5">
         <div class="heading ">
             <h1 class="fw-bolder mb-4">Our Cafe Menu</h1>
-            <h2 class="fw-bold pb-3 sub-title">Drinks</h2>
+            <h2 class="fw-semibold pb-3 sub-title">Drinks</h2>
         </div>
         <div class="row pt-3 g-4">
             <div class="box col-12 col-md-6 col-lg-3">
