--- a/cafe.html
+++ b/cafe.html
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav text-center text-lg-start me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link ms-2 " aria-current="page" href="#">Home</a>
+                        <a class="nav-link ms-2 " aria-current="page" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link ms-2" href="#">Gallery</a>
