--- a/booking.html
+++ b/booking.html
@@ -29,16 +29,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav text-center text-lg-start me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link ms-2 " aria-current="page" href="./index.html">Home</a>
+                        <a class="nav-link ms-2 " href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link ms-2" href="#">Gallery</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link ms-2" href="#">Profile</a>
+                        <a class="nav-link ms-2" href="./profile.html">Profile</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active ms-2" href="#">Booking</a>
+                        <a class="nav-link active ms-2" aria-current="page" href="#">Booking</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link ms-2" href="./cafe.html">Cafe</a>
