--- a/cafe.html
+++ b/cafe.html
@@ -33,7 +33,7 @@
                         <a class="nav-link ms-2 " href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link ms-2" href="#">Gallery</a>
+                        <a class="nav-link ms-2" href="./gallery.html">Gallery</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link ms-2" href="./profile.html">Profile</a>
