--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link ms-2" href="#">Gallery</a>
+              <a class="nav-link ms-2" href="./gallery.html">Gallery</a>
             </li>
             <li class="nav-item">
               <a class="nav-link ms-2" href="./profile.html">Profile</a>
