--- a/profile.html
+++ b/profile.html
@@ -98,7 +98,7 @@
                         <a class="nav-link ms-2" aria-current="page" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link ms-2" href="#">Gallery</a>
+                        <a class="nav-link ms-2" href="./gallery.html">Gallery</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active ms-2" href="./profile.html">Profile</a>
