refactor: restore old data

--- a/booking.html
+++ b/booking.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,9 +15,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
         integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles/cafe.css">
+    <link rel="stylesheet" href="styles/main-style.css">
     <link rel="stylesheet" href="styles/booking.css">
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg bg-white border-bottom sticky-top">
         <div class="container-fluid ms-2 me-2">
@@ -32,7 +34,7 @@
                         <a class="nav-link ms-2 " href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link ms-2" href="#">Gallery</a>
+                        <a class="nav-link ms-2" href="./gallery.html">Gallery</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link ms-2" href="./profile.html">Profile</a>
@@ -67,7 +69,8 @@
                     </div>
                     <div class="card-body pb-1 d-flex flex-column">
                         <h4 class="item-name fw-bold">Single Seat</h4>
-                        <p class="card-text text-black-50 fw-semibold">Dedicated space for individual focus and productivity.</p>
+                        <p class="card-text text-black-50 fw-semibold">Dedicated space for individual focus and
+                            productivity.</p>
                         <p class="btn main-btn rounded-pill mt-auto">Capacity: 1 people</p>
                         <a href="" class="btn mb-3 sec-btn">Book Now</a>
                     </div>
@@ -80,7 +83,8 @@
                     </div>
                     <div class="card-body pb-1 d-flex flex-column">
                         <h4 class="item-name fw-bold">Private Room</h4>
-                        <p class="card-text text-black-50 fw-semibold">Fully equipped room for team meetings and private sessions.</p>
+                        <p class="card-text text-black-50 fw-semibold">Fully equipped room for team meetings and private
+                            sessions.</p>
                         <p class="btn main-btn rounded-pill mt-auto">Capacity: 4 people</p>
                         <a href="" class="btn mb-3 sec-btn">Book Now</a>
                     </div>
@@ -112,4 +116,5 @@
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
         crossorigin="anonymous"></script>
 </body>
+
 </html>
