--- a/cafe.html
+++ b/cafe.html
@@ -16,6 +16,7 @@
         integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles/cafe.css">
+    <link rel="stylesheet" href="styles/main-style.css">
 </head>
 
 <body>
