--- a/profile.html
+++ b/profile.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,64 +23,92 @@
     <link rel="stylesheet" href="styles/booking.css">
     <style>
         body {
-            background-color: #f8f9fa; /* Light gray background color for the body */
+            background-color: #f8f9fa;
+            /* Light gray background color for the body */
         }
+
         .myImage {
-            width: 120px; /* Set a fixed size for the profile image container */
+            width: 120px;
+            /* Set a fixed size for the profile image container */
             height: 120px;
-            border-radius: 50%; /* Make it a circle */
+            border-radius: 50%;
+            /* Make it a circle */
         }
+
         .form-control-plaintext {
-            padding-left: 0; /* Align with input fields */
+            padding-left: 0;
+            /* Align with input fields */
         }
+
         .nav-link.active {
             font-weight: bold;
         }
+
         .table-striped tbody tr:nth-of-type(odd) {
             background-color: rgba(0, 0, 0, 0.05);
         }
-        .table th, .table td {
+
+        .table th,
+        .table td {
             vertical-align: middle;
         }
+
         .badge.bg-success {
             background-color: #28a745 !important;
         }
+
         .badge.bg-warning {
             background-color: #ffc107 !important;
         }
+
         .table-responsive {
             overflow-x: auto;
         }
+
         .footer {
             background-color: #f8f9fa;
             border-top: 1px solid #e9ecef;
             padding: 2rem 0;
         }
+
         .profile-image-container {
-            width: 120px; /* Set a fixed size for the profile image container */
+            width: 120px;
+            /* Set a fixed size for the profile image container */
             height: 120px;
-            border-radius: 50%; /* Make it a circle */
-            overflow: hidden; /* Hide anything that goes outside the circle */
-            flex-shrink: 0; /* Prevents the image from shrinking on smaller screens */
+            border-radius: 50%;
+            /* Make it a circle */
+            overflow: hidden;
+            /* Hide anything that goes outside the circle */
+            flex-shrink: 0;
+            /* Prevents the image from shrinking on smaller screens */
         }
+
         .profile-image {
             width: 100%;
             height: 100%;
-            object-fit: cover; /* Ensures the image covers the entire container */
+            object-fit: cover;
+            /* Ensures the image covers the entire container */
         }
+
         .profile-img {
-            width: 40px; /* Set a fixed size for the navbar image container */
+            width: 40px;
+            /* Set a fixed size for the navbar image container */
             height: 40px;
-            border-radius: 50%; /* Make it a circle */
-            overflow: hidden; /* Hide anything that goes outside the circle */
+            border-radius: 50%;
+            /* Make it a circle */
+            overflow: hidden;
+            /* Hide anything that goes outside the circle */
         }
+
         .profile-img img {
             width: 100%;
             height: 100%;
-            object-fit: cover; /* Ensures the image covers the entire container */
+            object-fit: cover;
+            /* Ensures the image covers the entire container */
         }
     </style>
 </head>
+
 <body>
     <!-- Navbar from your provided code -->
     <nav class="navbar navbar-expand-lg bg-white border-bottom sticky-top">
@@ -110,7 +139,7 @@
                         <a class="nav-link ms-2" href="./cafe.html">Cafe</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link ms-2" href="https://example.com/">About & Location</a>
+                        <a class="nav-link ms-2" href="https://example.com/">About</a>
                     </li>
                 </ul>
             </div>
@@ -131,8 +160,7 @@
                 <!-- Profile Image Section -->
                 <div class="col-12 col-md-auto d-flex justify-content-center">
                     <div class="profile-image-container mb-3">
-                        <img id="user-profile-image" src="images/profile.jpg"
-                            class="myImage" alt="User Profile Image">
+                        <img id="user-profile-image" src="images/profile.jpg" class="myImage" alt="User Profile Image">
                     </div>
                 </div>
 
@@ -397,9 +425,12 @@
                 <a href="https://example.com/" class="text-secondary text-decoration-none">Company</a>
             </div>
             <div class="d-flex align-items-center">
-                <a href="https://example.com/" class="text-secondary me-3"><i class="fa-brands fa-facebook-f fa-lg"></i></a>
-                <a href="https://example.com/" class="text-secondary me-3"><i class="fa-brands fa-twitter fa-lg"></i></a>
-                <a href="https://www.linkedin.com/in/pola-samy-bb3a6031b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="text-secondary me-3"><i class="fa-brands fa-linkedin-in fa-lg"></i></a>
+                <a href="https://example.com/" class="text-secondary me-3"><i
+                        class="fa-brands fa-facebook-f fa-lg"></i></a>
+                <a href="https://example.com/" class="text-secondary me-3"><i
+                        class="fa-brands fa-twitter fa-lg"></i></a>
+                <a href="https://www.linkedin.com/in/pola-samy-bb3a6031b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                    class="text-secondary me-3"><i class="fa-brands fa-linkedin-in fa-lg"></i></a>
             </div>
         </div>
     </footer>
@@ -438,4 +469,5 @@
         });
     </script>
 </body>
+
 </html>
