refactor: redesign home page and link other pages

--- a/profile.html
+++ b/profile.html
@@ -21,6 +21,7 @@
     <!-- Link to local CSS files -->
     <link rel="stylesheet" href="styles/cafe.css">
     <link rel="stylesheet" href="styles/booking.css">
+    <link rel="stylesheet" href="styles/main-style.css">
     <style>
         body {
             background-color: #f8f9fa;
