--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile</title>
+    <title>Gallery</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,8 +15,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles/cafe.css">
-    <link rel="stylesheet" href="styles/booking.css">
+    <!-- <link rel="stylesheet" href="styles/cafe.css">
+    <link rel="stylesheet" href="styles/booking.css"> -->
+    <link rel="stylesheet" href="styles/main-style.css">
     <style>
         body {
             display: flex;
@@ -62,10 +63,6 @@
         .thumbnail-img.active {
             border-color: #0d6efd;
         }
-
-        .footer {
-            padding: 20px 0;
-        }
     </style>
 </head>
 
@@ -108,48 +105,46 @@
         </div>
     </nav>
 
-    <div class="content-container">
-        <div class="gallery-container">
-            <h1 class="mb-4">Our Gallery</h1>
+    <div class="container pt-5 pe-5">
+        <div class="content-container">
+            <div class="gallery-container">
+                <h1 class="mb-4">Our Gallery</h1>
 
-            <div id="galleryCarousel" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
+                <div id="galleryCarousel" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#galleryCarousel"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#galleryCarousel"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#galleryCarousel"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#galleryCarousel"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
 
-            <div class="row thumbnail-gallery mt-4">
+                <div class="row thumbnail-gallery mt-4">
+                </div>
             </div>
         </div>
+
+        <footer class="d-flex justify-content-between align-items-center pt-4 pb-4">
+            <div class="ms-0 ms-lg-5">
+                <a class="me-2" href="#">Navigate</a>
+                <a href="#">Contact</a>
+            </div>
+            <div class="icons me-0 me-lg-5">
+                <a href="https://www.linkedin.com/in/abdelrahman-ashraf-fathey/" target="_blank"><i
+                        class="fa-brands fa-linkedin-in list fs-4 me-2"></i></a>
+                <a href="https://github.com/AbdelrahmanAshraf62651" target="_blank"><i
+                        class="fa-brands fa-github fs-4 me-2"></i></a>
+                <a href="https://web.facebook.com/abdelrqhman.ashraf/" target="_blank"><i
+                        class="fa-brands fa-facebook-f fs-4"></i></a>
+            </div>
+        </footer>
     </div>
-
-    <hr class="my-4">
-
-    <footer class="footer">
-        <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
-            <div class="d-flex mb-3 mb-md-0">
-                <a href="https://example.com/" class="text-secondary text-decoration-none me-4">Quick Links</a>
-                <a href="https://example.com/" class="text-secondary text-decoration-none">Company</a>
-            </div>
-            <div class="d-flex align-items-center">
-                <a href="https://example.com/" class="text-secondary me-3"><i
-                        class="fa-brands fa-facebook-f fa-lg"></i></a>
-                <a href="https://example.com/" class="text-secondary me-3"><i
-                        class="fa-brands fa-twitter fa-lg"></i></a>
-                <a href="https://www.linkedin.com/in/pola-samy-bb3a6031b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
-                    class="text-secondary me-3"><i class="fa-brands fa-linkedin-in fa-lg"></i></a>
-            </div>
-        </div>
-    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
