fix: link about page with other pages

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
               <a class="nav-link ms-2" href="./profile.html">Profile</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link ms-2" aria-current="page" href="#">Booking</a>
+              <a class="nav-link ms-2" aria-current="page" href="./booking.html">Booking</a>
             </li>
             <li class="nav-item">
               <a class="nav-link ms-2" href="./cafe.html">Cafe</a>
