--- a/cafe.html
+++ b/cafe.html
@@ -46,7 +46,7 @@
                         <a class="nav-link active ms-2" aria-current="page" href="#">Cafe</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link ms-2" href="#">About</a>
+                        <a class="nav-link ms-2" href="./about.html">About</a>
                     </li>
                 </ul>
             </div>
