--- a/gallery.html
+++ b/gallery.html
@@ -95,7 +95,7 @@
                         <a class="nav-link ms-2" href="./cafe.html">Cafe</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link ms-2" href="#">About</a>
+                        <a class="nav-link ms-2" href="./about.html">About</a>
                     </li>
                 </ul>
             </div>
