--- a/gallery.html
+++ b/gallery.html
@@ -15,55 +15,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- <link rel="stylesheet" href="styles/cafe.css">
-    <link rel="stylesheet" href="styles/booking.css"> -->
     <link rel="stylesheet" href="styles/main-style.css">
-    <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-        }
-
-        .content-container {
-            flex-grow: 1;
-        }
-
-        .gallery-container {
-            max-width: 1000px;
-            margin: auto;
-            padding: 2rem 1rem;
-        }
-
-        .carousel-item img {
-            border-radius: 8px;
-        }
-
-        .carousel-caption {
-            position: static;
-            text-align: left;
-            padding: 1rem 0;
-            color: #333;
-        }
-
-        .thumbnail-gallery .col {
-            padding: 5px;
-        }
-
-        .thumbnail-img {
-            width: 100%;
-            height: 80px;
-            object-fit: cover;
-            border-radius: 4px;
-            cursor: pointer;
-            border: 2px solid transparent;
-            transition: border-color 0.3s;
-        }
-
-        .thumbnail-img.active {
-            border-color: #0d6efd;
-        }
-    </style>
+    <link rel="stylesheet" href="styles/gallery.css">
 </head>
 
 <body>
@@ -107,26 +60,22 @@
 
     <div class="container pt-5 pe-5">
         <div class="content-container">
+            <h1 class="mb-4 fw-bold">Our Gallery</h1>
+            <div id="galleryCarousel" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner"></div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#galleryCarousel"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#galleryCarousel"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
             <div class="gallery-container">
-                <h1 class="mb-4">Our Gallery</h1>
-
-                <div id="galleryCarousel" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#galleryCarousel"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#galleryCarousel"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-                </div>
-
-                <div class="row thumbnail-gallery mt-4">
-                </div>
+                <div class="thumbnail-gallery mt-3"></div>
             </div>
         </div>
 
@@ -149,92 +98,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const galleryItems = [
-                {
-                    image: 'images/gallary/1.jpeg.jpg',
-                    title: 'Collaborative Hub',
-                    description: 'Our vibrant co-working space designed to foster creativity and collaboration among members.'
-                },
-                {
-                    image: 'images/gallary/2.jpeg.jpg',
-                    title: 'Private Offices',
-                    description: 'Dedicated private offices for teams of all sizes, ensuring privacy and focus.'
-                },
-                {
-                    image: 'images/gallary/3.jpeg.jpg',
-                    title: 'Relaxation Zone',
-                    description: 'A comfortable space to unwind and recharge with a cup of coffee.'
-                },
-                {
-                    image: 'images/gallary/4.jpg',
-                    title: 'Event Space',
-                    description: 'Flexible event space perfect for workshops, meetups, and presentations.'
-                },
-                {
-                    image: 'images/gallary/5.jpg',
-                    title: 'Lounge Area',
-                    description: 'A bright and airy lounge for informal meetings and networking.'
-                },
-                {
-                    image: 'images/gallary/6.jpg',
-                    title: 'Outdoor Patio',
-                    description: 'Enjoy a breath of fresh air and a change of scenery on our outdoor patio.'
-                }
-            ];
-
-            const carouselInner = document.querySelector('.carousel-inner');
-            const thumbnailGallery = document.querySelector('.thumbnail-gallery');
-
-            galleryItems.forEach((item, index) => {
-                const carouselItem = document.createElement('div');
-                carouselItem.classList.add('carousel-item');
-                if (index === 0) {
-                    carouselItem.classList.add('active');
-                }
-                carouselItem.innerHTML = `
-                    <img src="${item.image}" class="d-block w-100" alt="${item.title}">
-                    <div class="carousel-caption d-block">
-                        <h5>${item.title}</h5>
-                        <p class="text-secondary">${item.description}</p>
-                    </div>
-                `;
-                carouselInner.appendChild(carouselItem);
-
-                const thumbnailCol = document.createElement('div');
-                thumbnailCol.classList.add('col');
-                const thumbnailImg = document.createElement('img');
-                thumbnailImg.src = item.image;
-                thumbnailImg.classList.add('thumbnail-img', 'img-fluid');
-                thumbnailImg.alt = item.title;
-                thumbnailImg.dataset.bsSlideTo = index;
-                thumbnailImg.setAttribute('aria-label', `Slide ${index + 1}`);
-
-                thumbnailImg.addEventListener('click', function () {
-                    const carousel = new bootstrap.Carousel(document.getElementById('galleryCarousel'));
-                    carousel.to(index);
-                });
-
-                thumbnailCol.appendChild(thumbnailImg);
-                thumbnailGallery.appendChild(thumbnailCol);
-            });
-
-            document.querySelector('.thumbnail-img').classList.add('active');
-
-            const galleryCarousel = document.getElementById('galleryCarousel');
-            galleryCarousel.addEventListener('slid.bs.carousel', function () {
-                const activeItem = document.querySelector('.carousel-item.active');
-                const newIndex = Array.from(carouselInner.children).indexOf(activeItem);
-
-                document.querySelectorAll('.thumbnail-img').forEach(thumb => {
-                    thumb.classList.remove('active');
-                });
-                document.querySelectorAll('.thumbnail-img')[newIndex].classList.add('active');
-            });
-        });
-    </script>
+    <script src="scripts/gallery.js"></script>
 </body>
 
 </html>
