fix: solved extra padding issue in small view

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
         </div>
     </nav>
 
-    <div class="container pt-5 pe-5">
+    <div class="container pt-5">
         <div class="about-us d-flex flex-column flex-lg-row align-items-center justify-content-between p-3 p-lg-4 rounded gap-5 gap-lg-3"
             style="background-color: #f2f2f2;">
             <div class="col-12 col-lg-6 d-flex flex-column justify-content-between align-items-start gap-3">
