--- a/booking.html
+++ b/booking.html
@@ -56,7 +56,7 @@
         </div>
     </nav>
 
-    <div class="container pt-5 pe-5">
+    <div class="container pt-5">
         <div class="heading ">
             <h1 class="fw-bolder mb-4">Book Your Workspace</h1>
             <h2 class="fw-semibold pb-3 sub-title">Choose Your Workspace Type</h2>
