--- a/gallery.html
+++ b/gallery.html
@@ -58,7 +58,7 @@
         </div>
     </nav>
 
-    <div class="container pt-5 pe-5">
+    <div class="container pt-5">
         <div class="content-container">
             <h1 class="mb-4 fw-bold">Our Gallery</h1>
             <div id="galleryCarousel" class="carousel slide" data-bs-ride="carousel">
