--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
     </section>
     
-    <div class="container pt-5 pe-5">
+    <div class="container pt-5">
         <div class="heading">
             <h1 class="fw-bolder mb-4 text-center">Quick Access</h1>
         </div>
