--- a/profile.html
+++ b/profile.html
@@ -332,7 +332,7 @@
     </div>
 
     <!-- A simple footer -->
-    <div class="container pt-5 pe-5">
+    <div class="container pt-5">
         <footer class="d-flex justify-content-between align-items-center pt-4 pb-4">
             <div class="ms-0 ms-lg-5">
                 <a class="me-2" href="#">Navigate</a>
