style(file-struct): restyle file structure

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
         integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles/index.css"/>
-    <link rel="stylesheet" href="styles/main-style.css"/>
+    <link rel="stylesheet" href="styles/home.css" />
+    <link rel="stylesheet" href="styles/main-style.css" />
     <title>WorkSpace</title>
 </head>
 
@@ -30,24 +30,24 @@
                         <a class="nav-link ms-2 active" aria-current="page" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link ms-2" href="./gallery.html">Gallery</a>
+                        <a class="nav-link ms-2" href="./pages/gallery.html">Gallery</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link ms-2" href="./profile.html">Profile</a>
+                        <a class="nav-link ms-2" href="./pages/profile.html">Profile</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link ms-2" href="./booking.html">Booking</a>
+                        <a class="nav-link ms-2" href="./pages/booking.html">Booking</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link ms-2" href="./cafe.html">Cafe</a>
+                        <a class="nav-link ms-2" href="./pages/cafe.html">Cafe</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link ms-2" href="./about.html">About</a>
+                        <a class="nav-link ms-2" href="./pages/about.html">About</a>
                     </li>
                 </ul>
             </div>
             <div class="profile-img d-none d-lg-block">
-                <img src="images/profile.jpg" class="img-fluid rounded-pill" alt="">
+                <img src="./images/profile.jpg" class="img-fluid rounded-pill" alt="">
             </div>
         </div>
     </nav>
@@ -55,24 +55,25 @@
     <section class="landing position-relative text-center d-flex justify-content-center flex-column">
         <div class="container">
             <div class="filter position-absolute"></div>
-            <h1 class="text-start position-relative mb-4">Step Into Your Ideal Workspace, Where Comfort Meets Productivity.</h1>
+            <h1 class="text-start position-relative mb-4">Step Into Your Ideal Workspace, Where Comfort Meets
+                Productivity.</h1>
             <p class="text-start position-relative mb-4">Find flexible, inspiring environments created to elevate
-            productivity, enhance creativity, and support meaningful
-            collaboration.</p>
+                productivity, enhance creativity, and support meaningful
+                collaboration.</p>
             <div class="buttons position-relative text-start">
-                <a href="#" class="btn btn-lg btn-dark me-2">Book Now</a>
-                <a href="#" class="btn btn-lg btn-light">Explore Spaces</a>
+                <a href="#" class="btn btn-lg sec-btn me-2">Book Now</a>
+                <a href="#" class="btn btn-lg main-btn">Explore Spaces</a>
             </div>
         </div>
     </section>
-    
+
     <div class="container pt-5">
         <div class="heading">
             <h1 class="fw-bolder mb-4 text-center">Quick Access</h1>
         </div>
         <div class="row pt-3 g-4">
             <div class="box col-12 col-md-6 col-lg-3">
-                <div class="card pt-5 h-100 text-center">
+                <div class="card shadow-sm pt-5 h-100 text-center">
                     <i class="fa-solid fa-book-open mx-auto"></i>
                     <div class="card-body pb-1 d-flex flex-column">
                         <h4 class="item-name fw-bold">Seamless Booking</h4>
@@ -83,8 +84,8 @@
                 </div>
             </div>
             <div class="box col-12 col-md-6 col-lg-3">
-                <div class="card pt-5 h-100 text-center">
-                        <i class="fa-solid fa-image mx-auto"></i>
+                <div class="card shadow-sm pt-5 h-100 text-center">
+                    <i class="fa-solid fa-image mx-auto"></i>
                     <div class="card-body pb-1 d-flex flex-column">
                         <h4 class="item-name fw-bold">Explore Our Spaces</h4>
                         <p class="card-text text-black-50">Discover stunning photos of our modern and
@@ -94,7 +95,7 @@
                 </div>
             </div>
             <div class="box col-12 col-md-6 col-lg-3">
-                <div class="card pt-5 h-100 text-center">
+                <div class="card shadow-sm pt-5 h-100 text-center">
                     <i class="fa-solid fa-mug-hot mx-auto"></i>
                     <div class="card-body pb-1 d-flex flex-column">
                         <h4 class="item-name fw-bold">Delightful Cafe</h4>
@@ -105,7 +106,7 @@
                 </div>
             </div>
             <div class="box col-12 col-md-6 col-lg-3">
-                <div class="card pt-5 h-100 text-center">
+                <div class="card shadow-sm pt-5 h-100 text-center">
                     <i class="fa-solid fa-user mx-auto"></i>
                     <div class="card-body pb-1 d-flex flex-column">
                         <h4 class="item-name fw-bold">Your Profile</h4>
@@ -123,11 +124,11 @@
             </div>
             <div class="icons me-0 me-lg-5">
                 <a href="https://www.linkedin.com/in/abdelrahman-ashraf-fathey/" target="_blank"><i
-                        class="fa-brands fa-linkedin-in list fs-4 me-2"></i></a>
+                        class="fa-brands fa-linkedin-in list fs-5 me-2"></i></a>
                 <a href="https://github.com/AbdelrahmanAshraf62651" target="_blank"><i
-                        class="fa-brands fa-github fs-4 me-2"></i></a>
+                        class="fa-brands fa-github fs-5 me-2"></i></a>
                 <a href="https://web.facebook.com/abdelrqhman.ashraf/" target="_blank"><i
-                        class="fa-brands fa-facebook-f fs-4"></i></a>
+                        class="fa-brands fa-facebook-f fs-5"></i></a>
             </div>
         </footer>
     </div>
