fix: food food card btn

--- a/pages/cafe.html
+++ b/pages/cafe.html
@@ -71,7 +71,7 @@
                         <h4 class="item-name fw-bold">Classic Latte</h4>
                         <p class="card-text text-black-50 fw-semibold">Rich espresso, steamed milk, and a thin layer of
                             foam.</p>
-                        <div>
+                        <div class="mt-auto">
                             <p class="btn main-btn rounded-pill mt-auto">$4.50</p>
                         </div>
                     </div>
@@ -86,7 +86,7 @@
                         <h4 class="item-name fw-bold">Americano</h4>
                         <p class="card-text text-black-50 fw-semibold">Espresso shots topped with hot water, creating a
                             light layer of crema.</p>
-                        <div>
+                        <div class="mt-auto">
                             <p class="btn main-btn rounded-pill mt-auto">$3.50</p>
                         </div>
                     </div>
@@ -101,7 +101,7 @@
                         <h4 class="item-name fw-bold">Cappuccino</h4>
                         <p class="card-text text-black-50 fw-semibold">Espresso with a perfect balance of steamed milk
                             and foamed milk.</p>
-                        <div>
+                        <div class="mt-auto">
                             <p class="btn main-btn rounded-pill mt-auto">$4.75</p>
                         </div>
                     </div>
@@ -116,7 +116,7 @@
                         <h4 class="item-name fw-bold">Matcha Latte</h4>
                         <p class="card-text text-black-50 fw-semibold">Premium ceremonial grade matcha with steamed
                             milk, served hot or iced.</p>
-                        <div>
+                        <div class="mt-auto">
                             <p class="btn main-btn rounded-pill mt-auto">$5.25</p>
                         </div>
                     </div>
@@ -131,7 +131,7 @@
                         <h4 class="item-name fw-bold">Iced Coffee</h4>
                         <p class="card-text text-black-50 fw-semibold">Brewed coffee served over ice, customizable with
                             milk and syrup.</p>
-                        <div>
+                        <div class="mt-auto">
                             <p class="btn main-btn rounded-pill mt-auto">$3.75</p>
                         </div>
                     </div>
@@ -146,7 +146,7 @@
                         <h4 class="item-name fw-bold">Herbal Tea Selection</h4>
                         <p class="card-text text-black-50 fw-semibold">A soothing selection of herbal teas,
                             caffeine-free.</p>
-                        <div>
+                        <div class="mt-auto">
                             <p class="btn main-btn rounded-pill mt-auto">$3.00</p>
                         </div>
                     </div>
@@ -165,7 +165,7 @@
                     <div class="card-body pb-1 d-flex flex-column">
                         <h4 class="item-name fw-bold">Butter Croissant</h4>
                         <p class="card-text text-black-50 fw-semibold">Classic flaky pastry, perfect for breakfast.</p>
-                        <div>
+                        <div class="mt-auto">
                             <p class="btn main-btn rounded-pill mt-auto">$4.50</p>
                         </div>
                     </div>
@@ -180,7 +180,7 @@
                         <h4 class="item-name fw-bold">Blueberry Muffin</h4>
                         <p class="card-text text-black-50 fw-semibold">Soft and moist muffin loaded with fresh
                             blueberries.</p>
-                        <div>
+                        <div class="mt-auto">
                             <p class="btn main-btn rounded-pill mt-auto">$3.50</p>
                         </div>
                     </div>
@@ -195,7 +195,7 @@
                         <h4 class="item-name fw-bold">Avocado Toast</h4>
                         <p class="card-text text-black-50 fw-semibold">Toasted sourdough with mashed avocado, chili
                             flakes, and sprouts..</p>
-                        <div>
+                        <div class="mt-auto">
                             <p class="btn main-btn rounded-pill mt-auto">$4.75</p>
                         </div>
                     </div>
@@ -210,7 +210,7 @@
                         <h4 class="item-name fw-bold">Greek Yogurt Parfait</h4>
                         <p class="card-text text-black-50 fw-semibold">Creamy Greek yogurt with granola, mixed berries,
                             and a drizzle of honey.</p>
-                        <div>
+                        <div class="mt-auto">
                             <p class="btn main-btn rounded-pill mt-auto">$5.25</p>
                         </div>
                     </div>
@@ -225,7 +225,7 @@
                         <h4 class="item-name fw-bold">Chicken Caesar Wrap</h4>
                         <p class="card-text text-black-50 fw-semibold">Grilled chicken, romaine lettuce, parmesan, and
                             Caesar dressing in a soft tortilla.</p>
-                        <div>
+                        <div class="mt-auto">
                             <p class="btn main-btn rounded-pill mt-auto">$3.75</p>
                         </div>
                     </div>
@@ -240,7 +240,7 @@
                         <h4 class="item-name fw-bold">Veggie Delight Sandwich</h4>
                         <p class="card-text text-black-50 fw-semibold">A medley of fresh vegetables, hummus, and
                             provolone cheese on whole wheat bread.</p>
-                        <div>
+                        <div class="mt-auto">
                             <p class="btn main-btn rounded-pill mt-auto">$3.00</p>
                         </div>
                     </div>
