feat: complete login page

--- a/pages/signup.html
+++ b/pages/signup.html
@@ -23,14 +23,6 @@
             <!-- Right form column -->
             <div class="col-12 col-lg-5 d-flex align-items-center justify-content-center my-5">
                 <div class="bg-white rounded-3 shadow-lg p-3 p-md-4 p-lg-5 w-100" style="max-width: 480px;">
-                    <!-- Logo Section -->
-                    <div class="text-center mb-0">
-                        <div class="d-flex align-items-center justify-content-center gap-2 mb-0 lh-1 fs-2">
-                            <span class="fw-bold fst-italic text-dark"
-                                style="font-family: 'Borel', cursive; line-height: 1;">logo</span>
-                        </div>
-                    </div>
-
                     <!-- Main Title -->
                     <div class="row">
                         <div class="col-12">
@@ -101,7 +93,7 @@
                         <!-- Sign In Link -->
                         <div class="text-center">
                             <span class="text-muted">Already have an account? </span>
-                            <a href="#" class="text-decoration-none fw-semibold">Sign In</a>
+                            <a href="./login.html" class="text-decoration-none fw-semibold">Sign In</a>
                         </div>
                     </form>
                 </div>
