style(css): edited login and signup pages structure

--- a/pages/login.html
+++ b/pages/login.html
@@ -14,13 +14,8 @@
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../styles/main-style.css">
+    <link rel="stylesheet" href="../styles/login.css">
     <title>Login</title>
-    <style>
-        input:focus {
-            border-color: var(--black-color)!important;
-            box-shadow:none !important;
-        }
-    </style>
 </head>
 
 <body class="bg-white">
