--- a/pages/signup.html
+++ b/pages/signup.html
@@ -10,20 +10,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Borel&display=swap" rel="stylesheet">
-    <title> Sign Up </title>
+    <link rel="stylesheet" href="../styles/main-style.css">
+    <link rel="stylesheet" href="../styles/login.css">
+    <title>Sign Up</title>
 </head>
 
 <body class="bg-white">
     <div class="container-fluid vh-100 p-0">
         <div class="row g-0 vh-100">
-            <!-- Left image column -->
-            <div class="col-lg-7 d-none d-lg-block">
+            <div class="col-lg-6 d-none d-lg-block">
                 <img src="../images/signup/signup.png" alt="Background Image" class="w-100 h-100 object-fit-cover">
             </div>
-            <!-- Right form column -->
-            <div class="col-12 col-lg-5 d-flex align-items-center justify-content-center my-5">
-                <div class="bg-white rounded-3 shadow-lg p-3 p-md-4 p-lg-5 w-100" style="max-width: 480px;">
-                    <!-- Main Title -->
+            <div class="col-12 col-lg-6 d-flex align-items-center justify-content-center my-5 p-3">
+                <div class="bg-white rounded-3 shadow-sm p-3 p-md-4 p-lg-5 w-100" style="max-width: 480px; border: solid 1px var(--grey-color);">
                     <div class="row">
                         <div class="col-12">
                             <h1 class="fw-bold fs-2 text-dark mb-2 mt-0 text-center text-lg-center">Create Your Account
@@ -32,68 +31,50 @@
                                 team's collaboration and productivity.</p>
                         </div>
                     </div>
-
-                    <!-- Sign Up Form -->
                     <form>
-                        <!-- Full Name Field -->
                         <div class="mb-3">
                             <label for="fullName" class="form-label fw-semibold text-dark">Full Name</label>
-                            <input type="text" class="form-control form-control-lg" id="fullName" placeholder="John Doe"
+                            <input type="text" class="form-control form-control-md" id="fullName" placeholder="John Doe"
                                 required>
                         </div>
-
-                        <!-- Email Field -->
                         <div class="mb-3">
                             <label for="email" class="form-label fw-semibold text-dark">Email</label>
-                            <input type="email" class="form-control form-control-lg" id="email"
+                            <input type="email" class="form-control form-control-md" id="email"
                                 placeholder="john.doe@example.com" required>
                         </div>
-
-                        <!-- Phone Number Field -->
                         <div class="mb-3">
                             <label for="phone" class="form-label fw-semibold text-dark">Phone Number</label>
-                            <input type="tel" class="form-control form-control-lg" id="phone"
+                            <input type="tel" class="form-control form-control-md" id="phone"
                                 placeholder="+1 (555) 123-4567" required>
                         </div>
-
-                        <!-- Password Field -->
                         <div class="mb-3">
                             <label for="password" class="form-label fw-semibold text-dark">Password</label>
-                            <input type="password" class="form-control form-control-lg" id="password" required>
+                            <input type="password" class="form-control form-control-md" id="password" required>
                             <div class="form-text text-muted small">
                                 Password must be at least 8 characters long, include an uppercase letter, a number, and
                                 a symbol.
                             </div>
                         </div>
-
-                        <!-- Confirm Password Field -->
                         <div class="mb-4">
                             <label for="confirmPassword" class="form-label fw-semibold text-dark">Confirm
                                 Password</label>
-                            <input type="password" class="form-control form-control-lg" id="confirmPassword" required>
+                            <input type="password" class="form-control form-control-md" id="confirmPassword" required>
                         </div>
-
-                        <!-- Terms and Conditions -->
                         <div class="mb-4">
-                            <div class="form-check">
+                            <div class="form-check d-flex gap-2 align-items-center">
                                 <input class="form-check-input" type="checkbox" id="terms" required>
-                                <label class="form-check-label text-muted small" for="terms">
-                                    I agree to the <a href="#" class="text-decoration-none">Terms of Service</a> and <a
-                                        href="#" class="text-decoration-none">Privacy Policy</a>.
+                                <label class="form-check-label text-muted small gap-1 d-flex align-items-center" for="terms">
+                                        <span>I agree to the</span><a href="#" class="text-decoration-none fw-semibold" style="color: var(--black-color);">Terms of Service</a> <span>and</span> <a
+                                        href="#" class="text-decoration-none fw-semibold" style="color: var(--black-color);">Privacy Policy</a>.
                                 </label>
                             </div>
                         </div>
-
-                        <!-- Register Button -->
                         <div class="mb-4">
-                            <button type="submit" class="btn btn-dark w-100 py-3 fw-semibold fs-5">Register for
-                                WorkWise</button>
+                            <button type="submit" class="btn btn-dark w-100 py-2 fs-6">Register</button>
                         </div>
-
-                        <!-- Sign In Link -->
                         <div class="text-center">
                             <span class="text-muted">Already have an account? </span>
-                            <a href="./login.html" class="text-decoration-none fw-semibold">Sign In</a>
+                            <a href="./login.html" class="text-decoration-none fw-semibold" style="color: var(--black-color);">Sign In</a>
                         </div>
                     </form>
                 </div>
